@@ -17,6 +17,8 @@ package com.atguigu.java;
  *                  方式二：-XX:+PrintGCDetails
  * @author shkstart  shkstart@126.com
  * @create 2020  20:15
+ *
+ * -Xms600m -Xmx600m -XX:+PrintGCDetails
  */
 public class HeapSpaceInitial {
     public static void main(String[] args) {
@@ -29,13 +31,13 @@ public class HeapSpaceInitial {
         System.out.println("-Xms : " + initialMemory + "M");
         System.out.println("-Xmx : " + maxMemory + "M");
 
-//        System.out.println("系统内存大小为：" + initialMemory * 64.0 / 1024 + "G");
-//        System.out.println("系统内存大小为：" + maxMemory * 4.0 / 1024 + "G");
+       // System.out.println("系统内存大小为：" + initialMemory * 64.0 / 1024 + "G");
+       // System.out.println("系统内存大小为：" + maxMemory * 4.0 / 1024 + "G");
 
-        try {
-            Thread.sleep(1000000);
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
+        // try {
+        //     Thread.sleep(1000000);
+        // } catch (InterruptedException e) {
+        //     e.printStackTrace();
+        // }
     }
 }
